--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.fgcu</groupId>
-  <artifactId>median-finder</artifactId>
+  <artifactId>bubble-popper</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>median-finder</name>
+  <name>bubble-popper</name>
   <url>http://maven.apache.org</url>
   <dependencies>
       <dependency>
