--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.fgcu</groupId>
-  <artifactId>bubble-popper</artifactId>
-  <packaging>jar</packaging>
+  <groupId>bubblePopperTest</groupId>
+  <artifactId>Bubble-Popper</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>bubble-popper</name>
   <url>http://maven.apache.org</url>
@@ -19,7 +18,7 @@
       	<artifactId>easymock</artifactId>
       	<version>3.2</version>
       </dependency>
-    </dependencies>
+  </dependencies>
 
   
   <build>
